// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`renders primary input component correctly 1`] = `
<div>
  <div
    className="MuiFormControl-root MuiTextField-root textFieldPrimary css-7fph8o-MuiFormControl-root-MuiTextField-root"
    data-testid="primaryInput"
  >
    <label
      className="MuiInputLabel-root MuiInputLabel-formControl MuiInputLabel-animated MuiInputLabel-shrink MuiInputLabel-outlined MuiFormLabel-root MuiFormLabel-colorPrimary MuiFormLabel-filled css-1sumxir-MuiFormLabel-root-MuiInputLabel-root"
      data-shrink={true}
    >
      TO DO
    </label>
    <div
      className="MuiOutlinedInput-root MuiInputBase-root MuiInputBase-colorPrimary MuiInputBase-formControl css-9ddj71-MuiInputBase-root-MuiOutlinedInput-root"
      onClick={[Function]}
    >
      <input
        aria-invalid={false}
        autoFocus={false}
        className="MuiOutlinedInput-input MuiInputBase-input css-1t8l2tu-MuiInputBase-input-MuiOutlinedInput-input"
        disabled={false}
        onAnimationStart={[Function]}
        onBlur={[Function]}
        onChange={[Function]}
        onFocus={[Function]}
        placeholder="TO DO PLEASE"
        required={false}
        type="text"
        value="TO DO"
      />
      <fieldset
        aria-hidden={true}
        className="MuiOutlinedInput-notchedOutline css-1d3z3hw-MuiOutlinedInput-notchedOutline"
      >
        <legend
          className="css-7nxzgd"
        >
          <span>
            TO DO
          </span>
        </legend>
      </fieldset>
    </div>
  </div>
</div>
`;

exports[`renders secondary input component correctly 1`] = `
<div>
  <div
    className="MuiFormControl-root MuiTextField-root textFieldSecondary css-o7qk7u-MuiFormControl-root-MuiTextField-root"
    data-testid="secondaryInput"
  >
    <label
      className="MuiInputLabel-root MuiInputLabel-formControl MuiInputLabel-animated MuiInputLabel-shrink MuiInputLabel-outlined MuiFormLabel-root MuiFormLabel-colorPrimary css-1sumxir-MuiFormLabel-root-MuiInputLabel-root"
      data-shrink={true}
      htmlFor="mui-2"
      id="mui-2-label"
    >
      TO DO
    </label>
    <div
      className="MuiOutlinedInput-root MuiInputBase-root MuiInputBase-colorPrimary MuiInputBase-formControl css-9ddj71-MuiInputBase-root-MuiOutlinedInput-root"
      onClick={[Function]}
    >
      <input
        aria-invalid={false}
        autoFocus={false}
        className="MuiOutlinedInput-input MuiInputBase-input css-1t8l2tu-MuiInputBase-input-MuiOutlinedInput-input"
        disabled={false}
        id="mui-2"
        onAnimationStart={[Function]}
        onBlur={[Function]}
        onChange={[Function]}
        onFocus={[Function]}
        placeholder="TO DO PLEASE"
        required={false}
        type="text"
        value="TO DO"
      />
      <fieldset
        aria-hidden={true}
        className="MuiOutlinedInput-notchedOutline css-1d3z3hw-MuiOutlinedInput-notchedOutline"
      >
        <legend
          className="css-7nxzgd"
        >
          <span>
            TO DO
          </span>
        </legend>
      </fieldset>
    </div>
  </div>
</div>
`;
